documentation/2.2.0/manual/detailledTopics/production/_Sidebar.md
<!-- translated -->
<!--
### Deploying your application
-->
### アプリケーションのデプロイ

<!--
- [[Deploying your application|Production]]
- [[Creating a standalone version|ProductionDist]]
- [[Production configuration|ProductionConfiguration]]
- [[Setting up a front end HTTP server|HTTPServer]]
- [[Configuring HTTPS|ConfiguringHttps]]
- [[Deploying to a cloud service|DeployingCloud]]
-->
- [[アプリケーションのデプロイ|Production]]
- [[スタンドアローンパッケージを作成する|ProductionDist]]
- [[本番環境設定|ProductionConfiguration]]
- [[フロントエンド HTTP サーバの設定|HTTPServer]]
- [[HTTPS の設定 |ConfiguringHttps]]
- [[クラウドサービスへデプロイする | ProductionHeroku]]

<!--
### Getting started
-->
### はじめに

<!--
- [[Installing Play | Installing]]
- [[Creating a new application | NewApplication]]
- [[Anatomy of a Play application | Anatomy]]
- [[Using the Play console | PlayConsole ]]
- [[Setting-up your preferred IDE | IDE]]
- [[Sample applications | Samples]]
-->
- [[Play のインストール | Installing]]
- [[新規アプリケーションを作成する | NewApplication]]
- [[Play アプリケーションの構造 | Anatomy]]
- [[Play コンソールを使う | PlayConsole ]]
- [[好きな IDE で開発する | IDE]]
- [[サンプルアプリケーション | Samples]]

<!--
### Working with Play
-->
### Play で開発する

<!--
- [[Play for Scala developers | ScalaHome]]
- [[Play for Java developers | JavaHome]]
-->
- [[Scala 開発者のための Play | ScalaHome]]
- [[Java 開発者のための Play | JavaHome]]

<!--
### Detailed topics
-->
### 詳細なトピック

<!--
- [[The Build system | Build]]
- [[Working with public assets | Assets]]
- [[Managing database evolutions | Evolutions]]
- [[Configuration | Configuration]]
- [[Deploying your application | Production]]
-->
- [[ビルドシステム | Build]]
- [[公開アセットを使う | Assets]]
- [[データベース進化の管理 | Evolutions]]
- [[設定 | Configuration]]
- [[アプリケーションのデプロイ | Production]]

<!--
### Additional documentations
-->
### その他のドキュメント

- [Scala](http://docs.scala-lang.org/)
- [Akka](http://akka.io/docs/)
- [sbt](http://www.scala-sbt.org/learn.html)
- [Configuration](https://github.com/typesafehub/config)
- [Logback](http://logback.qos.ch/documentation.html)
